examples/type_system/failing/82_match_list_missing_empty.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/82_match_list_missing_empty.flx
// error[E015]: Non-Exhaustive Match
//
// Match is not exhaustive: 1 missing pattern.
//
//   examples/type_system/failing/82_match_list_missing_empty.flx:27:1
//    |
// 27 | match xs {
//    | ^^^^^^^^^^
// 28 |     [h | t] -> h
//    | ^^^^^^^^^^^^^^^^
// 29 | };
//    | ^
//
// Hint:
//   Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E015

// E015: List match missing empty branch.
let xs = [1, 2];

match xs {
    [h | t] -> h
};
